Strategy supporting callback

--- a/runtime/optimise.ipynb
+++ b/runtime/optimise.ipynb
@@ -2,18 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "strategy_completed_callback stats: lower_rsi: 30, upper_rsi: 55, loss_pct: 9, final Portfolio Value: 30000\n",
+      "strategy_completed_callback stats: lower_rsi: 35, upper_rsi: 55, loss_pct: 9, final Portfolio Value: 30000\n",
+      "strategy_completed_callback stats: lower_rsi: 40, upper_rsi: 55, loss_pct: 9, final Portfolio Value: 30712\n",
+      "strategy_completed_callback stats: lower_rsi: 45, upper_rsi: 55, loss_pct: 9, final Portfolio Value: 33450\n",
+      "strategy_completed_callback stats: lower_rsi: 50, upper_rsi: 55, loss_pct: 9, final Portfolio Value: 35850\n",
+      "strategy_completed_callback stats: lower_rsi: 30, upper_rsi: 60, loss_pct: 9, final Portfolio Value: 30000\n",
+      "strategy_completed_callback stats: lower_rsi: 35, upper_rsi: 60, loss_pct: 9, final Portfolio Value: 30000\n",
+      "strategy_completed_callback stats: lower_rsi: 40, upper_rsi: 60, loss_pct: 9, final Portfolio Value: 30712\n",
+      "strategy_completed_callback stats: lower_rsi: 45, upper_rsi: 60, loss_pct: 9, final Portfolio Value: 39742\n",
+      "strategy_completed_callback stats: lower_rsi: 50, upper_rsi: 60, loss_pct: 9, final Portfolio Value: 42254\n",
+      "strategy_completed_callback stats: lower_rsi: 30, upper_rsi: 65, loss_pct: 9, final Portfolio Value: 30000\n",
+      "strategy_completed_callback stats: lower_rsi: 35, upper_rsi: 65, loss_pct: 9, final Portfolio Value: 30000\n",
+      "strategy_completed_callback stats: lower_rsi: 40, upper_rsi: 65, loss_pct: 9, final Portfolio Value: 31320\n",
+      "strategy_completed_callback stats: lower_rsi: 45, upper_rsi: 65, loss_pct: 9, final Portfolio Value: 37643\n",
+      "strategy_completed_callback stats: lower_rsi: 50, upper_rsi: 65, loss_pct: 9, final Portfolio Value: 42194\n",
+      "Optimised runs by Final Value:\n",
+      "{'rsi_lower': 50, 'rsi_upper': 60, 'loss_pct': 9, 'final_value': 42254}\n",
+      "{'rsi_lower': 50, 'rsi_upper': 65, 'loss_pct': 9, 'final_value': 42194}\n",
+      "{'rsi_lower': 45, 'rsi_upper': 60, 'loss_pct': 9, 'final_value': 39742}\n",
+      "{'rsi_lower': 45, 'rsi_upper': 65, 'loss_pct': 9, 'final_value': 37643}\n",
+      "{'rsi_lower': 50, 'rsi_upper': 55, 'loss_pct': 9, 'final_value': 35850}\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import (absolute_import, division, print_function,\n",
     "                        unicode_literals)\n",
     "\n",
     "import datetime  # For datetime objects\n",
-    "import os.path  # To manage paths\n",
-    "import sys  # To find out the script name (in argv[0])\n",
-    "\n",
-    "# Import the backtrader platform\n",
     "import backtrader as bt\n",
     "import backtrader.analyzers as btanalyzers\n",
     "import yfinance as yf\n",
@@ -29,7 +66,8 @@
     "        ('upper_rsi', 60),\n",
     "        ('lower_rsi', 50),\n",
     "        ('loss_pct_threshold', 5),\n",
-    "        ('fixed_investment_ammount', 3000)\n",
+    "        ('fixed_investment_amount', 3000),\n",
+    "        ('custom_callback', None)\n",
     "    )\n",
     "\n",
     "    def log(self, txt, dt=None, do_print=False):\n",
@@ -139,7 +177,7 @@
     "                    self.log('%s BUY CREATE, %.2f' % (data._name, data.close[0]))\n",
     "\n",
     "                    # Buy dollar ammount\n",
-    "                    self.order[data._name] = self.buy(data=data, size=float(self.params.fixed_investment_ammount / data.close[0]))\n",
+    "                    self.order[data._name] = self.buy(data=data, size=float(self.params.fixed_investment_amount / data.close[0]))\n",
     "\n",
     "            else:\n",
     "                # TODO: Sell when RSI crosses over RSI-based-MA comming down above RSI 60, or when position showing 10% loss\n",
@@ -151,20 +189,33 @@
     "                    self.order[data._name] = self.sell(data = data, size = self.getposition(data).size)\n",
     "\n",
     "    def stop(self):\n",
-    "        stats.append({'rsi_lower': self.params.lower_rsi, \n",
-    "                      'rsi_upper': self.params.upper_rsi, \n",
-    "                      'loss_pct': self.params.loss_pct_threshold,\n",
-    "                      'final_value': round(self.broker.getvalue())}) \n",
     "        self.log(f'RSI: {self.params.upper_rsi}/{self.params.lower_rsi}, ' +\n",
     "                 f'loss_pct: {self.params.loss_pct_threshold}, '\n",
-    "                 f'investment: {self.params.fixed_investment_ammount}, '\n",
-    "                 f'End portfolio value: {round(self.broker.getvalue())}', do_print=True)\n",
+    "                 f'investment: {self.params.fixed_investment_amount}, '\n",
+    "                 f'End portfolio value: {round(self.broker.getvalue())}')\n",
+    "        if self.params.custom_callback is not None:\n",
+    "            self.params.custom_callback(self)\n",
+    "\n",
+    "\n",
+    "def strategy_completed_callback(strategy):\n",
+    "    final_value = strategy.broker.get_value()\n",
+    "    print(\"strategy_completed_callback stats: \" + \n",
+    "        f'lower_rsi: {strategy.params.lower_rsi}, ' +\n",
+    "        f'upper_rsi: {strategy.params.upper_rsi}, ' +\n",
+    "        f'loss_pct: {strategy.params.loss_pct_threshold}, ' +\n",
+    "        f'final Portfolio Value: {final_value:.0f}'\n",
+    "    )\n",
+    "    stats.append({'rsi_lower': strategy.params.lower_rsi, \n",
+    "        'rsi_upper': strategy.params.upper_rsi, \n",
+    "        'loss_pct': strategy.params.loss_pct_threshold,\n",
+    "        'final_value': round(strategy.broker.getvalue())}) \n",
+    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    # Create a cerebro entity\n",
-    "    cerebro = bt.Cerebro()\n",
+    "    cerebro = bt.Cerebro(optreturn=False)\n",
     "\n",
-    "    optimise = False\n",
+    "    optimise = True\n",
     "    \n",
     "    if not optimise:\n",
     "        # Add a strategy\n",
@@ -173,16 +224,17 @@
     "                            upper_rsi=60,\n",
     "                            lower_rsi=50,\n",
     "                            loss_pct_threshold = 9,\n",
-    "                            fixed_investment_ammount=5000)\n",
+    "                            fixed_investment_amount=5000)\n",
     "    else:\n",
     "        strats = cerebro.optstrategy(\n",
     "            TestStrategy,\n",
     "            upper_rsi=range(55, 70, 5),\n",
     "            lower_rsi=range(30, 55, 5),\n",
     "            loss_pct_threshold = 9,\n",
-    "            fixed_investment_ammount=5000\n",
+    "            fixed_investment_amount=5000,\n",
+    "            custom_callback=strategy_completed_callback,\n",
     "            )\n",
-    "        cerebro.addanalyzer(btanalyzers.SharpeRatio, _name='sharpe')\n",
+    "        cerebro.addanalyzer(btanalyzers.DrawDown, _name='drawdown')\n",
     "\n",
     "    # Add the Data Feed to Cerebro\n",
     "    end_date=datetime.datetime.today().date()\n",
@@ -198,30 +250,38 @@
     "    cerebro.broker.setcash(30000.0)\n",
     "\n",
     "    # Print out the starting conditions\n",
-    "    print('Starting Portfolio Value: %.2f' % cerebro.broker.getvalue())\n",
+    "    start_portfolio_value = cerebro.broker.getvalue()\n",
     "\n",
     "    # Run over everything\n",
-    "    opt_return = cerebro.run(maxcpus=1)\n",
-    "\n",
-    "    # Print out the final result\n",
-    "    #print('Final Portfolio Value: %.2f' % cerebro.broker.getvalue())\n",
+    "    opt_runs = cerebro.run(maxcpus=1)\n",
     "   \n",
-    "    sorted_results = sorted(stats, key=lambda x: x['final_value'], reverse=True)\n",
-    "    for result in sorted_results[:5]:\n",
-    "        print(result)\n",
-    "    \n",
-    "    if not optimise:\n",
+    "    if optimise: \n",
+    "        print('Optimised runs by Final Value:')\n",
+    "        sorted_results = sorted(stats, key=lambda x: x['final_value'], reverse=True)\n",
+    "        for result in sorted_results[:5]:\n",
+    "            print(result)\n",
+    "    else:\n",
+    "        # Print out the final result\n",
+    "        print(f'Portfolio Value Starting: {start_portfolio_value:.0f}, End: {cerebro.broker.getvalue():.0f}')\n",
+    "        print(f'Plotting graphs ...')\n",
     "        # Plot the result\n",
     "        %matplotlib inline\n",
     "        import matplotlib.pyplot as plt\n",
     "        from pylab import rcParams #Creates parameters for our plot\n",
-    "        rcParams['figure.figsize'] = 16, 5 * len(tickers) #size\n",
+    "        rcParams['figure.figsize'] = 16, 6 * len(tickers) #size\n",
     "        rcParams['figure.facecolor'] = '#eeeeee' #Color scheme\n",
     "        plt.plot() #The Plot Code\n",
     "        plt.close()\n",
     "        cerebro.plot(iplot=True, volume=False)\n",
     "        cerebro.plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
