Added open-position repository supporting reading of csv file

--- a/runtime/test.ipynb
+++ b/runtime/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[*********************100%%**********************]  1 of 1 completed\n",
-      "[*********************100%%**********************]  1 of 1 completed\n"
+      "[*********************100%%**********************]  1 of 1 completed"
      ]
     },
     {
@@ -21,6 +21,13 @@
       "2023-09-28, SNOW BUY CREATE, 151.12\n",
       "2023-09-28, NVDA Close: 43.09, RSI: 43.62, RSI-MA: 43.56, Position: 0.00, PNL: 0.00%\n",
       "2023-09-28, NVDA BUY CREATE, 43.09\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
