--- a/runtime/optimise.ipynb
+++ b/runtime/optimise.ipynb
@@ -304,7 +304,7 @@
     "\n",
     "num_years = 1\n",
     "year_offset = 0\n",
-    "target_stock = ['AMZN']\n",
+    "target_stock = tech_stock_without_snow\n",
     "\n",
     "num_years_in_days = 365 * num_years\n",
     "year_offset_in_days = 365 * year_offset\n",
