Change TradeToday to StockComputeService

--- a/runtime/test.ipynb
+++ b/runtime/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -16,19 +16,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trades_today: start_date=2024-03-12, end_date=2024-05-07\n",
-      "2024-04-23, META Close: 496.10, RSI: 47.13, RSI-MA: 51.07, Position: 0.00, PNL: 0.00%\n",
-      "2024-04-24, META Close: 493.50, RSI: 45.88, RSI-MA: 50.70, Position: 0.00, PNL: 0.00%\n",
-      "2024-04-25, META Close: 441.38, RSI: 29.21, RSI-MA: 49.17, Position: 0.00, PNL: 0.00%\n",
-      "2024-04-26, META Close: 443.29, RSI: 30.21, RSI-MA: 47.81, Position: 0.00, PNL: 0.00%\n",
-      "2024-04-29, META Close: 432.62, RSI: 27.85, RSI-MA: 46.39, Position: 0.00, PNL: 0.00%\n",
-      "2024-04-30, META Close: 430.17, RSI: 27.32, RSI-MA: 45.03, Position: 0.00, PNL: 0.00%\n",
-      "2024-05-01, META Close: 439.19, RSI: 32.41, RSI-MA: 44.13, Position: 0.00, PNL: 0.00%\n",
-      "2024-05-02, META Close: 441.68, RSI: 33.79, RSI-MA: 43.39, Position: 0.00, PNL: 0.00%\n",
-      "2024-05-03, META Close: 451.96, RSI: 39.30, RSI-MA: 43.09, Position: 0.00, PNL: 0.00%\n",
-      "2024-05-06, META Close: 465.68, RSI: 45.78, RSI-MA: 43.29, Position: 0.00, PNL: 0.00%\n",
-      "2024-05-06, META BUY CREATE, 465.68\n",
-      "TradeAction(date=2024-05-06, action=BUY, ticker=META, reason=None, context=None\n"
+      "2024-05-06 BUY META because META RSI: 46.68 (yesterday=40.47) above RSI-MA 46.10 under RSI < 50.00 threshold\n",
+      "Context:\n",
+      "2024-04-30, META, close: 430.17,  rsi: 29.10, rsi-ma: 48.38, position: 0.00, pnl-pct: 0.00%\n",
+      "2024-05-01, META, close: 439.19,  rsi: 33.92, rsi-ma: 47.35, position: 0.00, pnl-pct: 0.00%\n",
+      "2024-05-02, META, close: 441.68,  rsi: 35.23, rsi-ma: 46.48, position: 0.00, pnl-pct: 0.00%\n",
+      "2024-05-03, META, close: 451.96,  rsi: 40.47, rsi-ma: 46.05, position: 0.00, pnl-pct: 0.00%\n",
+      "2024-05-06, META, close: 465.68, *rsi: 46.68, rsi-ma: 46.10, position: 0.00, pnl-pct: 0.00%\n"
      ]
     },
     {
@@ -40,10 +34,13 @@
     }
    ],
    "source": [
-    "from api.services.backtesting_service import trades_today\n",
+    "from api.services.stock_compute_service import StockComputeService\n",
     "\n",
     "#trades_today('SNOW,NVDA', '2023-09-28')\n",
-    "trades_today('META', '2024-05-06')"
+    "trade_actions = StockComputeService('META', '2024-05-06', None).trades_today()\n",
+    "for  trade_action in trade_actions:\n",
+    "    print(trade_action.as_text())\n",
+    "#trades_today('META', '2024-05-06')"
    ]
   },
   {
