flattened project modules

--- a/src/notebooks/test.ipynb
+++ b/src/notebooks/test.ipynb
@@ -6,35 +6,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-05-06 BUY META because META RSI: 46.68 (yesterday=40.47) above RSI-MA 46.10 under RSI < 50.00 threshold\n",
-      "Context:\n",
-      "2024-04-30, META, close: 430.17,  rsi: 29.10, rsi-ma: 48.38, position: 0.00, pnl-pct: 0.00%\n",
-      "2024-05-01, META, close: 439.19,  rsi: 33.92, rsi-ma: 47.35, position: 0.00, pnl-pct: 0.00%\n",
-      "2024-05-02, META, close: 441.68,  rsi: 35.23, rsi-ma: 46.48, position: 0.00, pnl-pct: 0.00%\n",
-      "2024-05-03, META, close: 451.96,  rsi: 40.47, rsi-ma: 46.05, position: 0.00, pnl-pct: 0.00%\n",
-      "2024-05-06, META, close: 465.68, *rsi: 46.68, rsi-ma: 46.10, position: 0.00, pnl-pct: 0.00%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'services'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mservices\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstock_compute_service\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StockComputeService\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#trades_today('SNOW,NVDA', '2023-09-28')\u001b[39;00m\n\u001b[1;32m      4\u001b[0m trade_actions \u001b[38;5;241m=\u001b[39m StockComputeService(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMETA\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2024-05-06\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\u001b[38;5;241m.\u001b[39mtrades_today()\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'services'"
      ]
     }
    ],
    "source": [
-    "from api.services.stock_compute_service import StockComputeService\n",
+    "from services.stock_compute_service import StockComputeService\n",
     "\n",
     "#trades_today('SNOW,NVDA', '2023-09-28')\n",
     "trade_actions = StockComputeService('META', '2024-05-06', None).trades_today()\n",
