--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,18 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'services'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mconf\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mservices\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstock_compute_service\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StockComputeService\n\u001b[1;32m      5\u001b[0m trade_actions \u001b[38;5;241m=\u001b[39m StockComputeService(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMETA\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2024-05-06\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\u001b[38;5;241m.\u001b[39mtrades_today()\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m  trade_action \u001b[38;5;129;01min\u001b[39;00m trade_actions:\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'services'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-05-06 BUY META because META RSI: 46.68 (yesterday=40.47) above RSI-MA 46.10 under RSI < 50.00 threshold\n",
+      "Context:\n",
+      "2024-04-30, META, close: 430.17,  rsi: 29.10, rsi-ma: 48.38, position: 0.00, pnl-pct: 0.00%\n",
+      "2024-05-01, META, close: 439.19,  rsi: 33.92, rsi-ma: 47.35, position: 0.00, pnl-pct: 0.00%\n",
+      "2024-05-02, META, close: 441.68,  rsi: 35.23, rsi-ma: 46.48, position: 0.00, pnl-pct: 0.00%\n",
+      "2024-05-03, META, close: 451.96,  rsi: 40.47, rsi-ma: 46.05, position: 0.00, pnl-pct: 0.00%\n",
+      "2024-05-06, META, close: 465.68, *rsi: 46.68, rsi-ma: 46.10, position: 0.00, pnl-pct: 0.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
