split base and custom strategies

--- a/notebooks/rsi_strategy_optimiser.ipynb
+++ b/notebooks/rsi_strategy_optimiser.ipynb
@@ -2667,7 +2667,7 @@
    "source": [
     "import conf\n",
     "\n",
-    "from services.backtesting_service import BacktraderStrategy\n",
+    "from strategies.rsi_strategy import RsiStrategy\n",
     "from optimise_common import *\n",
     "\n",
     "import datetime  # For datetime objects\n",
@@ -2737,7 +2737,7 @@
     "\n",
     "    if not optimise:\n",
     "        # Add a strategy (see strategy-controls)\n",
-    "        cerebro.addstrategy(BacktraderStrategy,\n",
+    "        cerebro.addstrategy(RsiStrategy,\n",
     "                            start_date = start_date,\n",
     "                            printlog = printlog,\n",
     "                            upper_rsi = upper_rsi,\n",
@@ -2747,7 +2747,7 @@
     "                            fixed_investment_amount = fixed_investment_amount)\n",
     "    else:\n",
     "        strats = cerebro.optstrategy(\n",
-    "            BacktraderStrategy,\n",
+    "            RsiStrategy,\n",
     "            start_date = start_date,\n",
     "            upper_rsi= 60 , # upper_rsi=range(55, 70, 5), RSI-upper down-crossing not wired\n",
     "            lower_rsi = range(30, 60, 5), #, 40 \n",
